<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    tools:context=".aboutus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="115dp"
                    android:id="@+id/cimageView"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/logogcit"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:id="@id/cimage"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:layout_marginLeft="40dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/logo"/>

                <TextView
                    android:id="@+id/dis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/cimage"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="40dp"
                    android:text="GCIT ཟ་ཁང་རྩིིས་དེབ།"
                    android:textSize="17dp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:fontFamily="serif"
            android:justificationMode="inter_word"
            android:text="@string/discriptionapp"
            android:textSize="17dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="26dp"
        android:layout_marginLeft="140dp"
        android:text="Developers"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/tashi" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tashi Phuntsho (Mentor)"
                android:textSize="17dp"
                />

            <TextView
                android:id="@+id/more1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tp"
                android:text="@string/More1"
                android:textSize="17dp" />

        </RelativeLayout>

    </LinearLayout>






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/tshering" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tshering Gyeltshen (BscIT Group 'B')"
                android:textSize="17dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tg"
                android:text="@string/More2"
                android:id="@+id/more2"
                android:textSize="17dp" />


        </RelativeLayout>

        </LinearLayout>



        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/samten" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Samten Wangmo (BscIT Group 'A')"
                android:textSize="17dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sw"
                android:text="@string/More3"
                android:id="@+id/more3"
                android:textSize="17dp" />



        </RelativeLayout>

        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/ugyen" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ugyen Tashi (BscIT Group 'B')"
                android:textSize="17dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ut"
                android:id="@+id/more4"
                android:text="@string/More4"
                android:textSize="17dp" />


        </RelativeLayout>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/choki" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Chokey Wangmo BscIT (Group 'A')"
                android:textSize="17dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cw"
                android:text="@string/More5"
                android:id="@+id/more5"
                android:textSize="17dp" />


        </RelativeLayout>

        </LinearLayout>


    </LinearLayout>


</ScrollView>